# vim

./: CMakeLists.txt
.circleci/: config.yml
src/: CMakeLists.txt  autogenerate.cmake  config.h.cmake.in  osdef.sh  pathdef.c.in
src/libvterm/: CMakeLists.txt
src/testdir/: CMakeLists.txt  test.cmake
